# number_converter

./: .gitignore  .mypy.ini  .ruff.toml  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yaml  ruff.yaml
src/number_converter/: __init__.py  base.py  cases.py  converters.py  main.py  numbers.py  types.py
tests/: test_convert_number.py  test_exceptions.py  test_numerals.py  test_prime_number.py  test_prime_numerals.py  test_simple_number.py
