[project]
name = "number_converter"
version = "0.1.0"
description = "Converting an integer to text in words"
authors = [
    {name = "Sergei Mikurov",email = "454004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "number_converter", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"